--- a/configuration.properties
+++ b/configuration.properties
@@ -6,6 +6,7 @@ faceBookUrl=https://www.facebook.com
 hotelMyCampUrl=https://www.hotelmycamp.com
 hepsiBuradaUrl=https://www.hepsiburada.com
 blueRentUrl=https://www.bluerentalcars.com
+googleUrl=https://www.google.com
 
 !-- FACEBOOK YANLIS KULLANICI VE SIFRE
 faceBookWrongEmail=nvosdvjdvjsd@nciss.com 
