--- a/configuration.properties
+++ b/configuration.properties
@@ -7,7 +7,7 @@ hotelMyCampUrl=https://www.hotelmycamp.com
 hepsiBuradaUrl=https://www.hepsiburada.com
 blueRentUrl=https://www.bluerentalcars.com
 googleUrl=https://www.google.com
-dataTablesUrl=https://datatables.net/
+dataTablesUrl=https://editor.datatables.net/
 
 !-- FACEBOOK YANLIS KULLANICI VE SIFRE
 faceBookWrongEmail=nvosdvjdvjsd@nciss.com 
