--- a/configuration.properties
+++ b/configuration.properties
@@ -8,6 +8,7 @@ hepsiBuradaUrl=https://www.hepsiburada.com
 blueRentUrl=https://www.bluerentalcars.com
 googleUrl=https://www.google.com
 dataTablesUrl=https://editor.datatables.net/
+guruUrl=http://demo.guru99.com/test/web-table-element.php
 
 !-- FACEBOOK YANLIS KULLANICI VE SIFRE
 faceBookWrongEmail=nvosdvjdvjsd@nciss.com 
