--- a/configuration.properties
+++ b/configuration.properties
@@ -9,6 +9,7 @@ blueRentUrl=https://www.bluerentalcars.com
 googleUrl=https://www.google.com
 dataTablesUrl=https://editor.datatables.net/
 guruUrl=http://demo.guru99.com/test/web-table-element.php
+webUrl=https://webdriveruniversity.com
 
 !-- FACEBOOK YANLIS KULLANICI VE SIFRE
 faceBookWrongEmail=nvosdvjdvjsd@nciss.com 
